--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
 <body>
-    
+    <!-- hyperlink -->
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="#">Contact</a>
+    <p>Welcome to visual labs. My name is Aiman kazi</p>
 </body>
 </html>
