--- a/services.html
+++ b/services.html
@@ -6,6 +6,9 @@
     <title>Services</title>
 </head>
 <body>
-    
+    <!-- hyperlink -->
+    <a href="index.html">Home</a>
+    <a href="#">Services</a>
+    <a href="contact.html">Contact</a>
 </body>
 </html>
