--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Home Page</title>
 </head>
 <body>
-    
+    <!-- hyperlink -->
+    <a href="#">Home</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+
+    <h1>HOME PAGE</h1>
 </body>
 </html>
